--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "jsdom": "^13.0.0",
     "phaser": "^3.15.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
