--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "TODO: Write a project description",
   "main": "index.js",
   "dependencies": {
-    "@tensorflow/tfjs": "^0.14.0",
+    "@tensorflow/tfjs-node": "^0.1.17",
+    "@tensorflow/tfjs-node-gpu": "^0.1.17",
+    "fs-extra": "^7.0.0",
     "canvas": "^2.1.0",
     "jsdom": "^13.0.0",
     "phaser": "^3.15.1"
