--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^0.1.17",
     "@tensorflow/tfjs-node-gpu": "^0.1.17",
-    "fs-extra": "^7.0.0",
     "canvas": "^2.1.0",
+    "fs-extra": "^7.0.0",
     "jsdom": "^13.0.0",
-    "phaser": "^3.15.1"
+    "phaser": "^3.15.1",
+    "webpack": "^4.26.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
