--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "2d_walker_rl_js",
   "version": "0.0.1",
-  "description": "TODO: Write a project description",
+  "description": "A 2d humanoid walker trained to walk with reinforcement learning",
   "main": "index.js",
   "dependencies": {
     "@tensorflow/tfjs-node": "^0.1.17",
     "@tensorflow/tfjs-node-gpu": "^0.1.17",
-    "canvas": "^2.1.0",
-    "fs-extra": "^7.0.0",
-    "jsdom": "^13.0.0",
-    "phaser": "^3.15.1",
-    "webpack": "^4.26.1",
-    "webpack-dev-server": "^3.1.10"
+    "canvas": "^2.1.0"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-cli": "^3.1.2",
+    "webpack": "^4.26.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "display": "webpack-dev-server -d",
+    "train": "node scripts/train | tee outputs/train_$(date +\"%Y-%m-%d_%H-%M-%S\").log"
   },
   "repository": {
     "type": "git",
