--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "canvas": "^2.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.10",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^4.0.0-beta.4",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
-    "webpack": "^4.26.1"
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
