--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 /outputs/
+/checkpoints/
 
 # Created by https://www.gitignore.io/api/node,linux
 # Edit at https://www.gitignore.io/?templates=node,linux
