--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
       "env"
     ]
   },
-  "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "display": "webpack-dev-server -d",
-    "train": "./node_modules/.bin/babel-node  --max-old-space-size=16192 scripts/train | tee outputs/train_$(date +\"%Y-%m-%d_%H-%M-%S\").log"
+    "train": "./node_modules/.bin/babel-node  --max-old-space-size=16192 scripts/train | tee outputs/train_$(date +\"%Y-%m-%d_%H-%M-%S\").log",
+    "build": "NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wassname/rl_2d_walker.js.git"
   },
-  "author": "",
+  "author": "wassname",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wassname/rl_2d_walker.js/issues"
